added contact form

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         <!-- contact -->
         <section id="section-3" class="contact-container">
             <h2>Contact</h2>
-            <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+            <!-- <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php"> -->
+            <form id="fcf-form-id" class="fcf-form-class" name="contactForm">
                 <div class="fcf-form-group">
                     <label for="Name" class="fcf-label">Your name</label>
                     <input type="text" id="Name" name="Name" class="fcf-form-control" required>
@@ -147,6 +148,14 @@
             </a>
         </div>
     </footer>
+    <script src="index.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init(process.env.USER - ID);
+        })();
+    </script>
+
 </body>
 
 </html>
