updated project and skills info

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
 <body>
     <nav class="navbar-container">
-        <h3>Luci Jones</h3>
+        <a href="" class="logo">Luci Jones</a>
         <div>
-            <a href="#section-1">About</a>
-            <a href="#section-2">Projects</a>
-            <a href="#section-3">Contact</a>
+            <a href="#section-1" class="nav-item">About</a>
+            <a href="#section-4" class="nav-item">Skills</a>
+            <a href="#section-2" class="nav-item">Projects</a>
+            <a href="#section-3" class="nav-item">Contact</a>
         </div>
     </nav>
 
@@ -42,6 +43,7 @@
             </div>
             <div class="second-button-box">
                 <a class="button main-button" href="#section-1">About</a>
+                <a class="button main-button" href="#section-4">Skills</a>
                 <a class="button main-button" href="#section-2">Projects</a>
             </div>
 
@@ -64,7 +66,18 @@
                 I am excited to create functional and user-friendly technologies that are equitable, accessible, and
                 improve the lives of a diverse audience of users.
             </p>
+        </section>
 
+        <!-- skills-->
+        <section id="section-4" class="skills-container">
+            <h2>Skills</h2>
+            <p>Languages: JavaScript, JSON, HTML, CSS<br>
+                Frameworks: MERN Stack, AJAX/HTTP<br>
+                Libraries: React, Node.js, Express.js, Mongoose<br>
+                Databases: MongoDB<br>
+                Authorization: Bcrypt<br>
+                Version Control: Git
+            </p>
         </section>
 
         <!-- projects -->
@@ -74,6 +87,7 @@
                 <div class="project">
                     <h4>Creative Writing App</h4>
                     <img src="./images/screenshot-creative-writing-app.PNG" />
+                    <p>TECHNOLOGIES: React, Node, Express, Mongoose, MongoDB</p>
                     <p>This full-stack app is for a community of users to be able to submit prompts and publish
                         practice written works. Users can also save posted prompts and comment on each other's
                         entries.</p>
@@ -87,6 +101,7 @@
                 <div class="project">
                     <h4>Recipe and Menu App</h4>
                     <img src="./images/screenshot-recipe-app.PNG" />
+                    <p>TECHNOLOGIES: React, Node, Express, Mongoose, MongoDB</p>
                     <p>Incorporating the Spoonacular API, this app allows users to save recipes and to
                         create weekly meal plans. </p>
                     <div class="button-box2">
@@ -100,6 +115,7 @@
                 <div class="project">
                     <h4>Book Search App</h4>
                     <img src="./images/screenshot-book-search-app.PNG" />
+                    <p>TECHNOLOGIES: React, Node</p>
                     <p>This book search app is built to interact with the Open Libary API. Users can search through
                         books and save them to a list.</p>
                     <div class="button-box2">
